--- a/css/main.css
+++ b/css/main.css
@@ -18,13 +18,17 @@ a {
   text-decoration: none;
 }
 
+h1 {
+  font-size: 55px;
+}
 /* UTILITIES  */
 
 .container {
   position: relative;
-  width: 1100px;
+  width: 1075px;
   left: 50%;
   transform: translate(-50%, 0);
+  padding: 15px 0;
 }
 
 .clearfix::after{
@@ -42,30 +46,34 @@ a {
   display: inline-block;
 }
 
+.column3 {
+  float: left;
+  width: calc(100% / 3)
+}
+
+
 .right-align {
   text-align: right
 }
 
 .btn {
-  background-color: orange;
+  background-color: darkorange;
   color: white;
   border-radius: 8px;
 }
 
 .btn-big {
-  padding: 15px 35px;
+  padding: 27px 37px;
+  font-weight: bolder;
 }
 .btn-small {
   padding: 5px;
 }
 
+
 /* HEADER */
 #top-menu {
   background: #f5f8fa;
-}
-
-#top-menu .container{
-  padding: 15px 0;
 }
 
 #btn-login{
@@ -76,4 +84,29 @@ a {
 
 #search-icon{
   color: #00C1C2;
+}
+
+.main-nav{
+  background: white;
+}
+
+
+/* HEADER
+/     Jumbotron*/
+.jumbotron {
+  background-image: url(../img/jumbotron.png);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  padding-top: 75px;
+  padding-bottom: 225px;
+}
+
+
+.jumbotron * {
+  margin-bottom: 30px;
+}
+
+
+.jumbotron p {
+  line-height: 200%;
 }
