--- a/css/main.css
+++ b/css/main.css
@@ -88,7 +88,7 @@ li{
   font-weight: bolder;
 }
 .btn-small {
-  padding: 12px 10px;
+  padding: 10px 10px;
   border-radius: 8px
 }
 
@@ -123,7 +123,7 @@ li{
     /* header: top menu: RIGHT COLUMN */
 #top-menu .column2.right * {
   display: inline-block;
-  margin-right: 20px;
+  margin-left: 20px;
 }
 
 #btn-login {
@@ -137,7 +137,7 @@ li{
 
     /* header: MAIN-NAV */
 #main-nav {
-  padding: 15px 0;
+  padding: 12px 0;
 }
 
 #main-nav .column2.right {
