--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@ body {
 a {
   display: inline-block;
   text-decoration: none;
+  color: inherit;
 }
 
 h1 {
@@ -88,8 +89,9 @@ li{
   font-weight: bolder;
 }
 .btn-small {
-  padding: 10px 10px;
-  border-radius: 8px
+  padding: 8px 8px;
+  line-height: 80%;
+  border-radius: 5px
 }
 
 .fas.fa-check-circle {
@@ -113,7 +115,8 @@ li{
     /* header: top menu: LEFT COLUMN */
 
 #top-menu .column2.left {
-  padding: 14px 0;
+  height: 30px;
+  padding-top: 6px;
 }
 
 #first-block {
@@ -356,11 +359,20 @@ main {
 footer {
   background: #33475b;
   color: white;
-  padding-bottom: 18px;
+  padding: 10px 0 10px 0;
+}
+
+footer .column4 {
+  text-align: left;
+  line-height: 250%;
+}
+
+footer .column4 h3 {
+  padding-bottom: 10px;
 }
 
 #support-btn {
-  margin: 5px 0;
+  margin: 10px 0;
   background: lightgrey;
   color: #33475b;
 }
@@ -370,12 +382,13 @@ footer {
 }
 
 .social-media-row * {
-  padding: 10px;
+  padding-right: 12px;
 }
 
 .lang-bar{
   text-align: center;
   border-bottom: 1px solid white;
+  margin: 30px 0 10px 0;
 }
 
 .lang-bar a {
@@ -386,7 +399,7 @@ footer {
 
 .copyright * {
   display: block;
-  padding-bottom: 15px;
+  padding-bottom: 5px;
 }
 
 .legal a {
