--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,10 @@ h1 {
   font-size: 55px;
 }
 
+h2 {
+  font-size: 30px;
+}
+
 li{
   list-style-type: none;
 }
@@ -232,35 +236,29 @@ main {
 
 /* INFO LAST  */
 #info-last {
-  padding-bottom: 40px;
+  padding-bottom: 50px;
 }
 
 .column3.left {
   text-align: left;
-  background-color: red;
 }
 
 .column3.centre {
   text-align: center;
-  background-color: black;
 }
-
-.column3.right {
-  background-color: gold;
-}
-
 
 .inside-container {
   display: inline-block;
   width: 90%;
   background-color: white;
   padding: 0 35px 35px 35px;
+  line-height: 150%;
 }
 
 .head-column {
   text-align: center;
   border-bottom: 2px solid gray;
-  height: 350px;;
+  height: 365px;;
 }
 
 .head-column img {
@@ -280,7 +278,7 @@ main {
 
 .bottom-column{
   text-align: left;
-  padding: 20px 0;
+  padding: 25px 0;
 }
 
 .bottom-column h4 {
@@ -293,65 +291,102 @@ main {
 }
 
 
-/* EARN AND GROW */
-#earn-grow {
+/* LEARN AND GROW */
+#learn-grow {
   background: linear-gradient(45deg, #00a4bd, #00bda5);
-  margin-bottom: 50px;
-}
-
-#earn-grow.container {
+  padding-bottom: 90px;
+  color: white;
   text-align: center;
 }
 
-#earn-grow.container * {
-  text-align: center;
+    /* Learn and grow: FIRST CONTAINER*/
+#learn-grow .first h2 {
+  padding: 0 5%;
+  margin: 25px 0;
 }
 
-.earn-grow-table {
+#learn-grow .first p {
+  margin-bottom: 35px;
+}
+
+
+    /* Learn and grow: EARN GROW TABLE (two of them)*/
+.learn-grow-table {
   position: relative;
   padding: 0;
 }
 
-.earn-grow-table .column4 {
-  border: 1px solid white;
-  height: 268px;
+.learn-grow-table.first {
+  border-bottom: 1px solid white;
+}
+
+.learn-grow-table .column4:not(.last) {
+  border-right: 1px solid white;
+}
+
+.learn-grow-table .column4 {
+  height: 208px;
 }
 
 .upper-column4 {
-  height: calc(100% / 3);
+  height: 40%;
+  padding: 15% 0 0 0;
 }
 
-#i-hand {
-  height: 45px;
-  width: 45px;
+.icon {
+  max-height: 70%;
+  max-width: 70%;
   color: white;
 }
 
 .bottom-column4 {
-  height: calc(2* 100% / 3);
+  height: 60%;
   color: white;
+}
+
+.bottom-column4 * {
+  padding: 5px 0 0 0;
 }
 
 
 /* LAST PART OF MAIN */
-#number {
-  font-weight: bolder;
+    /*Last part of Main: FIRST ROW (two colums) */
+#last-main {
+  margin-top: 40px;
 }
 
+
+#last-main h1 {
+  margin-bottom: 20px;
+}
+
+#last-main .column3{
+  padding-left: 55px;
+}
 .column67percent .logos-row {
   padding: 0 55px 25px 0;
 }
 
 .logos-row img {
+  text-align: left;
   display: inline-block;
   width: 100px;
   height: 30px;
   margin-left: 45px;
 }
 
+
+    /*Last part of Main: SECOND ROW (two colums) */
+#second-row-last-main .column2.left {
+    margin-top: 25px;
+}
+
+#second-row-last-main .column2.left * {
+  margin: 20px 0;
+}
 #img-woman {
-  width: 290px;
-  height: 325px;
+  width: 348px;
+  height: 390px;
 }
 
 
@@ -362,6 +397,7 @@ footer {
   padding: 10px 0 10px 0;
 }
 
+    /* Footer: FIRT SECTION  */
 footer .column4 {
   text-align: left;
   line-height: 250%;
@@ -385,6 +421,8 @@ footer .column4 h3 {
   padding-right: 12px;
 }
 
+
+    /* Footer: LANGUAGES BAR  */
 .lang-bar{
   text-align: center;
   border-bottom: 1px solid white;
@@ -397,6 +435,8 @@ footer .column4 h3 {
   color: white;
 }
 
+
+    /* Footer: FINALE NOTES  */
 .copyright * {
   display: block;
   padding-bottom: 5px;
