--- a/css/main.css
+++ b/css/main.css
@@ -196,7 +196,6 @@ main {
 }
 
   /* First Container */
-
 #first-main {
   position: relative;
   left: 50%;
@@ -204,6 +203,11 @@ main {
   padding-bottom: 45px;
   width: 70%;
   text-align: center;
+  line-height: 150%;
+}
+
+#first-main h2 {
+  padding-bottom: 20px;
 }
 
 #first-main img {
@@ -216,19 +220,56 @@ main {
   /* Hub-spot */
 #hub-spot{
   background: white;
-  padding-top: 30px;
-  margin-bottom: 50px;
+  padding: 25px 0;
+  line-height: 150%;
+  margin-bottom: 25px;
 }
 
     /* Hub-spot: LELFT COLUMN (33%) */
+#hub-spot .column3 {
+  padding: 25px 0 25px 0;
+  text-align: center;
+}
+
 #hub-spot img{
-  display: inline-block;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  display: block;
   width: 130px;
   height: 100px;
-  margin-bottom: 10px;
+  margin-bottom: 25px;
 }
 
       /* Hub-spot: RIGHT COLUMN (67%) */
+#hub-spot .column67percent {
+  padding: 25px 0 25px 0;
+}
+
+#hub-spot h3 {
+  font-size: 20px;
+  padding: 0 0 25px 0;
+}
+
+#hub-spot p {
+  width: 85%;
+}
+
+#lesser-title {
+  padding: 15px 0;
+}
+
+#lesser-title::after {
+  background-color: gray;
+  content: "";
+  display: inline-block;
+  height: 2px;
+  position: relative;
+  vertical-align: middle;
+  margin-left: 50px;
+  width: 63%;
+}
+
 #hub-spot li {
   display: inline-block;
   margin-right: 20px;
