--- a/css/main.css
+++ b/css/main.css
@@ -88,10 +88,16 @@ li{
   border-radius: 8px;
 }
 
+.btn:hover {
+  opacity: 0.5;
+}
+
+
 .btn-big {
   padding: 23px 32px;
   font-weight: bolder;
 }
+
 .btn-small {
   padding: 8px 8px;
   line-height: 80%;
@@ -143,8 +149,13 @@ li{
 }
 
 #btn-login {
-  border: 1px solid orange;
-  color: orange;
+  border: 1px solid#FF7A59;
+  color: #FF7A59;
+}
+
+#btn-login:hover {
+  background: #ffe0b3;
+  opacity: 0.5
 }
 
 #search-icon{
@@ -456,6 +467,10 @@ footer .column4 {
 
 footer .column4 h3 {
   padding-bottom: 10px;
+}
+
+footer a:hover {
+  color: #66b3ff;
 }
 
 #support-btn {
